// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render collapsed sortable block 1`] = `
<section
  class="block"
>
  <div
    class="handle"
  >
    <span
      aria-label="ellipsis-v"
      class="sortableHandle fa fa-ellipsis-v"
    />
  </div>
  <div
    class="content"
  >
    <article />
  </div>
</section>
`;

exports[`Render expanded sortable block 1`] = `
<section
  class="block expanded"
>
  <div
    class="handle"
  >
    <span
      aria-label="ellipsis-v"
      class="sortableHandle fa fa-ellipsis-v"
    />
  </div>
  <div
    class="content"
  >
    <header
      class="header"
    >
      <div
        class="icons"
      >
        <span
          aria-label="trash-o"
          class="fa fa-trash-o clickable"
          role="button"
          tabindex="0"
        />
        <span
          aria-label="times"
          class="fa fa-times clickable"
          role="button"
          tabindex="0"
        />
      </div>
    </header>
    <article>
      Test for Test Content
    </article>
  </div>
</section>
`;

exports[`Render expanded sortable block with types 1`] = `
<section
  class="block expanded"
>
  <div
    class="handle"
  >
    <span
      aria-label="ellipsis-v"
      class="sortableHandle fa fa-ellipsis-v"
    />
  </div>
  <div
    class="content"
  >
    <header
      class="header"
    >
      <div
        class="select"
      >
        <button
          class="displayValue"
        >
          <div
            aria-label="Type 2"
            class="croppedText"
            title="Type 2"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              Typ
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                e 2
              </span>
            </div>
            <div
              class="whole"
            >
              Type 2
            </div>
          </div>
          <span
            aria-label="chevron-down"
            class="toggle fa fa-chevron-down"
          />
        </button>
      </div>
      <div
        class="icons"
      >
        <span
          aria-label="trash-o"
          class="fa fa-trash-o clickable"
          role="button"
          tabindex="0"
        />
        <span
          aria-label="times"
          class="fa fa-times clickable"
          role="button"
          tabindex="0"
        />
      </div>
    </header>
    <article>
      Test for Test Content
    </article>
  </div>
</section>
`;
